--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
     <style>
-        #train-table th,
+        /* #train-table th,
     td {
       display: inline-block;
       width: 16.575%;
-    }
+    } */
   </style>
 </head>
 
@@ -89,9 +89,8 @@
                                 <label for="frequency-input">Frequency (minutes)</label>
                                 <input class="form-control" id="frequency-input" placeholder="45 minutes" type="text">
                             </div>
-                            <button class="btn btn-primary float-left" id="add-train-btn">Submit</button>
+                            <button class="btn btn-primary float-left" id="submit">Submit</button>
                         </form>
-
                     </div>
                 </div>
             </div>
