--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Train Scheduler</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
@@ -18,13 +20,7 @@
     <!-- Moment.js Reference -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
-    <style>
-        /* #train-table th,
-    td {
-      display: inline-block;
-      width: 16.575%;
-    } */
-  </style>
+    <title>Train Scheduler</title>
 </head>
 
 <body>
@@ -33,27 +29,26 @@
     <div class="container">
 
         <!-- Jumbotron -->
-        <div class="jumbotron" style="background-color: black; color: white">
-            <h1 class="text-center">Trains, Trains, And More Trains</h1>
-            <h3 class="text-center">All aboard!</h3>
+        <div class="jumbotron" style="background-color: #1281e9; color: black">
+            <h1 class="text-center">Train Adventure Planner</h1>
         </div>
 
         <div class="row">
 
-            <div class="col-md-12">
+            <div class="col-lg-12">
 
                 <!-- Current Trains-->
-                <div class="card mb-4">
+                <div class="card">
                     <div class="card-header">Current Train Schedule</div>
                     <div class="card-body">
                         <table class="table table-sm table-hover" id='train-schedule'>
                             <thead>
                                 <tr>
-                                    <th scope="col">Train Name</th>
-                                    <th scope="col">Destination</th>
-                                    <th scope="col">Frequency (minutes)</th>
-                                    <th scope="col">Next Arrival</th>
-                                    <th scope="col">Minutes Away</th>
+                                    <th>Train Name</th>
+                                    <th>Destination</th>
+                                    <th>Frequency (minutes)</th>
+                                    <th>Next Arrival</th>
+                                    <th>Minutes Away</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -63,11 +58,11 @@
                 </div>
             </div>
         </div>
-
+        <br>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <!-- Add Train  -->
-                <div class="card mb-4">
+                <div class="card">
                     <div class="card-header">Add Train</div>
                     <div class="card-body">
 
@@ -75,27 +70,26 @@
                         <form>
                             <div class="form-group">
                                 <label for="train-name-input">Train Name</label>
-                                <input class="form-control" id="train-name-input" placeholder="Polar Express" type="text">
+                                <input class="form-control" id="train-name-input" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="destination-input" placeholder="Boston" type="text">
+                                <input class="form-control" id="destination-input" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="start-time-input">First Train Time (HH:mm - military time)</label>
-                                <input class="form-control" id="start-time-input" placeholder="12:00" type="text">
+                                <input class="form-control" id="start-time-input" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (minutes)</label>
-                                <input class="form-control" id="frequency-input" placeholder="45 minutes" type="text">
+                                <input class="form-control" id="frequency-input" type="text">
                             </div>
-                            <button class="btn btn-primary float-left" id="submit">Submit</button>
+                            <button class="btn btn-primary float-left" id="submit">Add</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     <!-- JavaScript -->
